--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
+    "firebase": "^11.4.0",
     "@vapi-ai/web": "^2.2.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
