--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,16 +2,38 @@
     "name": "Gas Genie",
     "short_name": "Gas Genie",
     "description": "AI-powered voice assistant for UK gas engineers",
+    "id": "/",
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#0F172A",
     "theme_color": "#0F172A",
     "orientation": "portrait",
+    "categories": [
+        "utilities",
+        "business"
+    ],
     "icons": [
         {
             "src": "/favicon.svg",
             "sizes": "any",
             "type": "image/svg+xml"
+        },
+        {
+            "src": "/icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-512-maskable.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
